# ai-observability-platform

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/api/v1/: alerts.py  analysis.py  analytics.py  anomalies.py  ingest.py  logs.py  tenants.py  websocket.py
backend/app/consumers/: anomaly_consumer.py  log_consumer.py
backend/app/core/: auth.py  config.py  database.py  kafka_client.py  redis_client.py
backend/app/models/: __init__.py  alerts.py  anomalies.py  logs.py  tenants.py
backend/app/schemas/: __init__.py  alert.py  anomaly.py  log.py  tenant.py
backend/app/services/: alert_engine.py  anomaly_detector.py  baseline_calculator.py  log_service.py  webhook_deliverer.py
backend/app/utils/: log_template.py
backend/tests/: conftest.py  test_alert_engine.py  test_anomaly_detection.py  test_ingestion.py  test_integration.py  test_query_api.py
docs/: api_contracts.md  architecture.md  data_models.md  final_report.md  folder_structure.md  integration_notes.md  interview_prep.md  kafka_design.md  performance.md  requirements.md  sdlc_checklist.md  status.txt  tech_decisions.md
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  style.css
frontend/src/components/: AnomalyCard.tsx  HealthIndicator.tsx  Layout.tsx  LogStream.tsx  MetricsBar.tsx  ProtectedRoute.tsx  ServiceCard.tsx  ServiceHealthGrid.tsx  SeverityBadge.tsx  StatusDot.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Anomalies.tsx  Dashboard.tsx  (+3 more)
infra/: init.sql
load_tests/: README.md  locustfile.py  run_tests.sh
(+2 files in other folders)
